Fix:Prevent contact section overlapping with skills

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -602,8 +602,9 @@ section {
 }
 #skills {
   margin-bottom: 100px;
-  padding-bottom: 100px;
+  padding-bottom: 120px;
   position:relative;
+  overflow: visible;
   z-index:0; /* gives space after skills before contact starts */
 }
 
